# async_pqxx

./: .clang-format  .gitignore  CMakeLists.txt  bitbucket-pipelines.yml  conanfile.py  conanfile.txt
conan_test/: CMakeLists.txt  conanfile.py  main.cpp
include/async_pqxx/: error.hpp  manager.hpp  thread_connection.hpp
include/async_pqxx/operations/: exec.hpp  exec1.hpp  exec_functor.hpp
include/asyncpq/: manager.hpp  thread_connection.hpp
include/asyncpq/operations/: exec.hpp  exec1.hpp
src/: error.cpp  thread_connection.cpp
test/: manager.cpp  precondition_pqxx.cpp  precondition_thread_local.cpp
test/integration/: insert.cpp  manager.cpp  select_generated.cpp  test_database.cpp  test_database.hpp
test/precondition/: precondition_lockfree.cpp  precondition_pqxx.cpp
